--- a/Finder/Finder.vcxproj.filters
+++ b/Finder/Finder.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClCompile Include="Functional.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="MsgWork.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
     <ClCompile Include="SmartFinder.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
@@ -36,15 +33,18 @@
     <ClCompile Include="Objects.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="MainFunc.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="SmartStringLoad.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Finder.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Functional.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="Local.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
@@ -60,6 +60,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="includes.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="SmartStringLoad.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
